welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: not found: value nurNord
      nurNord=true
      ^